--- a/src/page/css/main.css
+++ b/src/page/css/main.css
@@ -1,11 +1,7 @@
 @font-face {
   font-family: Vazir;
 
-  src: url('Vazir.eot');
-
-  src: url('Vazir.eot?#iefix') format('embedded-opentype'),
-    url('Vazir.woff2') format('woff2'), url('Vazir.woff') format('woff'),
-    url('Vazir.ttf') format('truetype');
+  src: url('../assets/fonts/Vazir.ttf') format('truetype');
 
   font-weight: normal;
 
@@ -15,12 +11,7 @@
 @font-face {
   font-family: Vazir;
 
-  src: url('Vazir-Bold.eot');
-
-  src: url('Vazir-Bold.eot?#iefix') format('embedded-opentype'),
-    url('Vazir-Bold.woff2') format('woff2'),
-    url('Vazir-Bold.woff') format('woff'),
-    url('Vazir-Bold.ttf') format('truetype');
+  src: url('../assets/fonts/Vazir-Bold.ttf') format('truetype');
 
   font-weight: bold;
 
@@ -30,12 +21,7 @@
 @font-face {
   font-family: Vazir;
 
-  src: url('Vazir-Black.eot');
-
-  src: url('Vazir-Black.eot?#iefix') format('embedded-opentype'),
-    url('Vazir-Black.woff2') format('woff2'),
-    url('Vazir-Black.woff') format('woff'),
-    url('Vazir-Black.ttf') format('truetype');
+  src: url('../assets/fonts/Vazir-Black.ttf') format('truetype');
 
   font-weight: 900;
 
@@ -45,12 +31,7 @@
 @font-face {
   font-family: Vazir;
 
-  src: url('Vazir-Medium.eot');
-
-  src: url('Vazir-Medium.eot?#iefix') format('embedded-opentype'),
-    url('Vazir-Medium.woff2') format('woff2'),
-    url('Vazir-Medium.woff') format('woff'),
-    url('Vazir-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/Vazir-Medium.ttf') format('truetype');
 
   font-weight: 500;
 
@@ -60,12 +41,7 @@
 @font-face {
   font-family: Vazir;
 
-  src: url('Vazir-Light.eot');
-
-  src: url('Vazir-Light.eot?#iefix') format('embedded-opentype'),
-    url('Vazir-Light.woff2') format('woff2'),
-    url('Vazir-Light.woff') format('woff'),
-    url('Vazir-Light.ttf') format('truetype');
+  src: url('../assets/fonts/Vazir-Light.ttf') format('truetype');
 
   font-weight: 300;
 
@@ -75,12 +51,7 @@
 @font-face {
   font-family: Vazir;
 
-  src: url('Vazir-Thin.eot');
-
-  src: url('Vazir-Thin.eot?#iefix') format('embedded-opentype'),
-    url('Vazir-Thin.woff2') format('woff2'),
-    url('Vazir-Thin.woff') format('woff'),
-    url('Vazir-Thin.ttf') format('truetype');
+  src: url('../assets/fonts/Vazir-Thin.ttf') format('truetype');
 
   font-weight: 100;
 
